completed till example-area section

--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 
     </div>
     <div class="features-card ">
-        <img src="./assests/asset 11.svg" alt="">
+        <img src="./assests/asset 17.svg" alt="">
         <h3>Card Sorting</h3>
         <p>Discover how people group and label information.</p>
         <a href="#" class="secondary-button">Learn More <i class="fa-duotone fa-arrow-right-long"></i></a>
 
     </div>
     <div class="features-card ">
-        <img src="./assests/asset 11.svg" alt="">
+        <img src="./assests/asset 13.svg" alt="">
         <h3>Card Sorting</h3>
         <p>Discover how people group and label information.</p>
         <a href="#" class="secondary-button">Learn More <i class="fa-duotone fa-arrow-right-long"></i></a>
@@ -98,21 +98,21 @@
     </div>
  
     <div class="features-card ">
-        <img src="./assests/asset 11.svg" alt="">
+        <img src="./assests/asset 14.svg" alt="">
         <h3>Card Sorting</h3>
         <p>Discover how people group and label information.</p>
         <a href="#" class="secondary-button">Learn More <i class="fa-duotone fa-arrow-right-long"></i></a>
 
     </div>
     <div class="features-card ">
-        <img src="./assests/asset 11.svg" alt="">
+        <img src="./assests/asset 15.svg" alt="">
         <h3>Card Sorting</h3>
         <p>Discover how people group and label information.</p>
         <a href="#" class="secondary-button">Learn More <i class="fa-duotone fa-arrow-right-long"></i></a>
 
     </div>
     <div class="features-card ">
-        <img src="./assests/asset 11.svg" alt="">
+        <img src="./assests/asset 16.svg" alt="">
         <h3>Card Sorting</h3>
         <p>Discover how people group and label information.</p>
         <a href="#" class="secondary-button">Learn More <i class="fa-duotone fa-arrow-right-long"></i></a>
@@ -122,11 +122,70 @@
 
     </div>
 </section>
+<!-- BIg feature section -->
 
-<section class="big-feature-section"></section>
-<section class="big-feature-section"></section>
-<section class="big-feature-section"></section>
-<section class="example-section"></section>
+<section class="big-feature-section">
+<div class="container flex big-feature-container">
+   <div class="feature-img">
+    <img src="./assests/asset 18.png" alt=""/>
+    </div>
+    <div class="festure-desc flex">
+            <h4>Effortless validation for</h4>
+            <h3>Design professionals</h3>
+            <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.
+            </p>
+    </div>
+</div>
+<section class="big-feature-section ">
+<div class="container flex big-feature-container flex-reverse">
+   <div class="feature-img">
+    <img src="./assests/asset 21.png" alt=""/>
+    </div>
+    <div class="festure-desc flex">
+            <h4>Effortless validation for</h4>
+            <h3>Design professionals</h3>
+            <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.
+            </p>
+    </div>
+</div>
+<section class="big-feature-section">
+<div class="container flex big-feature-container">
+   <div class="feature-img">
+    <img src="./assests/asset 24.png" alt=""/>
+    </div>
+    <div class="festure-desc flex">
+            <h4>Effortless validation for</h4>
+            <h3>Design professionals</h3>
+            <p>Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.
+            </p>
+    </div>
+</div>
+</section>
+<!-- Example section -->
+
+<section class="example-section">
+    <div class="container">
+        <div class="examples-header flex">
+            <h2 class="examples-heading-text">One platform, endless possibilities</h2>
+            <a href="#" class="secondary-button">See more examples<i class="fa-duotone fa-arrow-right-long"></i></a>
+        </div>
+        <div class="examples-area flex">
+            <a href="#" class="examples-card">
+                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+            </a>
+            <a href="#" class="examples-card">
+                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+            </a>
+            <a href="#" class="examples-card">
+                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+            </a>
+            <a href="#" class="examples-card">
+                <h3 class="card-text">Can users complete a task in my software interface?</h3>
+            </a>
+          
+        </div>
+    </div>
+</section>
 <section class="cta-section"></section>
 <footer></footer>
 <div class="sub-footer"></div>
